--- a/index.Rmd
+++ b/index.Rmd
@@ -24,7 +24,7 @@ opts_chunk$set(
   comment = "",
   fig.align = "center", 
   # https://github.com/gadenbuie/grkstyle
-  tidy = 'grkstyle::grk_style_transformer', 
+  tidy = FALSE, 
   tidy.opts=list(width.cutoff = 10)
 )
 
@@ -68,9 +68,9 @@ writeLines(bib, "packages.bib")
 
 Hola, mi nombre es Esteban Rucán, actual estudiante de cuarto año de la carrera de Estadística en la [Pontificia Universidad Católica de Chile](https://www.uc.cl). 
 
-Agradezco que hayas ingresado a mi libro personal. En él encontrarás apuntes de diversos temas que he realizado con mucha dedicación, con el fin de poder contribuir a quien lo necesite. Si este es tu caso, espero que disfrutes el material disponible.
+Agradezco que hayas ingresado a mi libro personal. En él encontrarás apuntes de diversos temas que he realizado con mucha dedicación, con el fin de poder contribuir a quien lo necesite. Si este es tu caso, espero que disfrutes el material disponible. ¡Si tienes alguna sugerencia o duda no dudes en escribirme a mi [correo](mailto:errucan@uc.cl)!.
 
-# Estructura del libro
+## Estructura del libro
 
-El libro contiene apuntes enfocados principalmente en el lenguaje `R`, por lo que la mayoría de su contenido esta enfocado en este. Podrás encontrar diversos tópicos sobre el lenguaje. Puedes acceder a estos desde la barra lateral.
+El libro contiene apuntes enfocados principalmente en el lenguaje `R`, por lo que la mayoría de su contenido esta enfocado en este. Podrás navegar entre diversos tópicos sobre el lenguaje desde la barra lateral. También está habilitado un modo oscuro y un selector de fuente.
 
