--- a/packages.bib
+++ b/packages.bib
@@ -39,6 +39,14 @@
 https://github.com/JohnCoene/echarts4r},
 }
 
+@Manual{R-gghighlight,
+  title = {gghighlight: Highlight Lines and Points in ggplot2},
+  author = {Hiroaki Yutani},
+  year = {2020},
+  note = {R package version 0.3.1},
+  url = {https://github.com/yutannihilation/gghighlight/},
+}
+
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
