--- a/index.Rmd
+++ b/index.Rmd
@@ -15,6 +15,8 @@ site: bookdown::bookdown_site
 description: "Expande tus conocimientos de R con el material que he preparado."
 github-repo: estebanrucan/personal-book
 graphics: yes
+params:
+  especie: "setosa"
 ---
 
 ```{r setup, include=FALSE, eval=TRUE}
