--- a/packages.bib
+++ b/packages.bib
@@ -79,6 +79,14 @@ https://github.com/JohnCoene/echarts4r},
   url = {https://github.com/trinker/pacman},
 }
 
+@Manual{R-plotly,
+  title = {plotly: Create Interactive Web Graphics via plotly.js},
+  author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
+  year = {2021},
+  note = {R package version 4.9.3},
+  url = {https://CRAN.R-project.org/package=plotly},
+}
+
 @Book{ggplot22016,
   author = {Hadley Wickham},
   title = {ggplot2: Elegant Graphics for Data Analysis},
@@ -117,5 +125,14 @@ https://github.com/JohnCoene/echarts4r},
   note = {version 0.5.0},
   year = {2018},
   url = {http://github.com/trinker/pacman},
+}
+
+@Book{plotly2020,
+  author = {Carson Sievert},
+  title = {Interactive Web-Based Data Visualization with R, plotly, and shiny},
+  publisher = {Chapman and Hall/CRC},
+  year = {2020},
+  isbn = {9781138331457},
+  url = {https://plotly-r.com},
 }
 
