--- a/03-magrittr-dplyr.Rmd
+++ b/03-magrittr-dplyr.Rmd
@@ -7,8 +7,8 @@ require(dplyr)
 
 # Transformación de datos con Tidyverse
 
-* En esta sección se hablo sobre algunas nociones básicas de transformación de datos. 
-* Puedes acceder a una clase en video que realicé sobre este tema en el siguiente [link]() 
+* En esta sección hablo sobre algunas nociones básicas de transformación de datos. 
+* Puedes acceder a una clase en video que realicé sobre este tema en el siguiente [link](https://www.youtube.com/watch?v=u-ktUNe-Itg).
 
 ## Importar un data frame en R
 
