Nuevo Capítulo: Rutas, importación y exportación de archivos

--- a/packages.bib
+++ b/packages.bib
@@ -27,8 +27,16 @@
   title = {echarts4r: Create Interactive Graphs with Echarts JavaScript Version 5},
   author = {John Coene},
   year = {2021},
-  note = {https://echarts4r.john-coene.com/,
-https://github.com/JohnCoene/echarts4r},
+  note = {R package version 0.4.0},
+  url = {https://CRAN.R-project.org/package=echarts4r},
+}
+
+@Manual{R-gghighlight,
+  title = {gghighlight: Highlight Lines and Points in ggplot2},
+  author = {Hiroaki Yutani},
+  year = {2020},
+  note = {R package version 0.3.1},
+  url = {https://github.com/yutannihilation/gghighlight/},
 }
 
 @Manual{R-ggplot2,
@@ -43,7 +51,7 @@ https://github.com/JohnCoene/echarts4r},
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 1.31},
+  note = {R package version 1.32},
   url = {https://yihui.org/knitr/},
 }
 
@@ -53,6 +61,14 @@ https://github.com/JohnCoene/echarts4r},
   year = {2020},
   note = {R package version 2.0.1},
   url = {https://CRAN.R-project.org/package=magrittr},
+}
+
+@Manual{R-plotly,
+  title = {plotly: Create Interactive Web Graphics via plotly.js},
+  author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
+  year = {2021},
+  note = {R package version 4.9.3},
+  url = {https://CRAN.R-project.org/package=plotly},
 }
 
 @Book{ggplot22016,
@@ -84,5 +100,14 @@ https://github.com/JohnCoene/echarts4r},
   year = {2014},
   note = {ISBN 978-1466561595},
   url = {http://www.crcpress.com/product/isbn/9781466561595},
+}
+
+@Book{plotly2020,
+  author = {Carson Sievert},
+  title = {Interactive Web-Based Data Visualization with R, plotly, and shiny},
+  publisher = {Chapman and Hall/CRC},
+  year = {2020},
+  isbn = {9781138331457},
+  url = {https://plotly-r.com},
 }
 
