--- a/packages.bib
+++ b/packages.bib
@@ -11,7 +11,7 @@
   title = {BiocManager: Access the Bioconductor Project Package Repository},
   author = {Martin Morgan},
   year = {2021},
-  note = {R package version 1.30.12},
+  note = {R package version 1.30.15},
   url = {https://CRAN.R-project.org/package=BiocManager},
 }
 
@@ -19,7 +19,7 @@
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2021},
-  note = {R package version 1.0.5},
+  note = {R package version 1.0.6},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -29,6 +29,14 @@
   year = {2021},
   note = {R package version 0.4.0},
   url = {https://CRAN.R-project.org/package=echarts4r},
+}
+
+@Manual{R-forcats,
+  title = {forcats: Tools for Working with Categorical Variables (Factors)},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 0.5.1},
+  url = {https://CRAN.R-project.org/package=forcats},
 }
 
 @Manual{R-gghighlight,
@@ -47,12 +55,28 @@
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
+@Manual{R-gt,
+  title = {gt: Easily Create Presentation-Ready Display Tables},
+  author = {Richard Iannone and Joe Cheng and Barret Schloerke},
+  year = {2021},
+  note = {R package version 0.3.0},
+  url = {https://CRAN.R-project.org/package=gt},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 1.32},
+  note = {R package version 1.33},
   url = {https://yihui.org/knitr/},
+}
+
+@Manual{R-lubridate,
+  title = {lubridate: Make Dealing with Dates a Little Easier},
+  author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.7.10},
+  url = {https://CRAN.R-project.org/package=lubridate},
 }
 
 @Manual{R-magrittr,
@@ -69,6 +93,54 @@
   year = {2021},
   note = {R package version 4.9.3},
   url = {https://CRAN.R-project.org/package=plotly},
+}
+
+@Manual{R-purrr,
+  title = {purrr: Functional Programming Tools},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2020},
+  note = {R package version 0.3.4},
+  url = {https://CRAN.R-project.org/package=purrr},
+}
+
+@Manual{R-readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester},
+  year = {2020},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=readr},
+}
+
+@Manual{R-stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2019},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=stringr},
+}
+
+@Manual{R-tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2021},
+  note = {R package version 3.1.2},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+
+@Manual{R-tidyr,
+  title = {tidyr: Tidy Messy Data},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.1.3},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+
+@Manual{R-tidyverse,
+  title = {tidyverse: Easily Install and Load the Tidyverse},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.3.1},
+  url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
 @Book{ggplot22016,
@@ -102,6 +174,17 @@
   url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
 
+@Article{lubridate2011,
+  title = {Dates and Times Made Easy with {lubridate}},
+  author = {Garrett Grolemund and Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {3},
+  pages = {1--25},
+  url = {https://www.jstatsoft.org/v40/i03/},
+}
+
 @Book{plotly2020,
   author = {Carson Sievert},
   title = {Interactive Web-Based Data Visualization with R, plotly, and shiny},
@@ -109,5 +192,16 @@
   year = {2020},
   isbn = {9781138331457},
   url = {https://plotly-r.com},
+}
+
+@Article{tidyverse2019,
+  title = {Welcome to the {tidyverse}},
+  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686},
 }
 
